--- a/apps/project-a/package.json
+++ b/apps/project-a/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "vite build && npx gh-pages -d dist"
   },
   "dependencies": {
     "@packages/ui-lib": "workspace:^"
