--- a/.github/workflows/ci-cid.yml
+++ b/.github/workflows/ci-cid.yml
@@ -16,11 +16,14 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 18
-        cache: pnpm
+        node-version: 18  # 確保版本與專案相符
+        cache: pnpm  # 開啟 pnpm 緩存
 
+    # 安裝 pnpm 並加入 PATH
     - name: Install pnpm
-      run: npm install -g pnpm
+      run: |
+        npm install -g pnpm
+        pnpm --version  # 驗證 pnpm 是否正確安裝
 
     - name: Install dependencies
       run: pnpm install
